--- a/src/app/components/browse/browse.component.html
+++ b/src/app/components/browse/browse.component.html
@@ -1,1 +1,36 @@
-<p>browse works!</p>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <h1 class="h101">01</h1>
+      <button  class="btn btn-link"><a href="#second" class="text-dark text-decoration-none">Scroll Down</a></button>
+    </div>
+    <div class="col">
+      <h1 class="h1">Order a medical</h1><h1 class="h1cont"> worker at home</h1>
+      <h1>From October to December the first
+        examination is free</h1>
+      <button (click)="gotoOrder()" type="button" class="btn btn-success">Make Order</button>
+      <img src="assets/hospital.jpg">
+    </div>
+  </div>
+  <div class="row" id="second">
+    <div class="col">
+      <h1 class="h1 text-right">Mini hospital at</h1>
+      <h1 class="h1cont text-right"> your home</h1>
+    </div>
+    <div class="col">
+      <h1 class="h1 text-right">
+        02
+      </h1>
+    </div>
+  </div>
+  <div class="row" style="padding-bottom: 5%">
+    <div class="col" style="background-color: #FCEABD;">
+      <h1 class="secText text-right">Why choose us?</h1>
+    </div>
+    <div class="col">
+      <h1 class="text-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis </h1>
+      <button (click)="gotoOrder()"  type="button" class="btn btn-success btnOrder">Make Order</button>
+    </div>
+  </div>
+</div>
+
