--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,12 +1,22 @@
-<mat-toolbar class="footer">
-  <mat-toolbar-row>
-  <a>LEGAL INFORMATION</a>
-  <a>DATA PRIVACY</a>
-  <a>OTHER LINKS</a>
-  <a>CONTACT</a>
-  </mat-toolbar-row>
-  <mat-toolbar-row >
-    <a >SUBSCRIBE FOR MORE INFO</a>
-    <input type="text">
-  </mat-toolbar-row>
-</mat-toolbar>
+<footer class="card-footer">
+  <div class="row">
+  <span>LEGAL INFORMATION</span>
+  <span>DATA PRIVACY</span>
+  <span>OTHER LINKS</span>
+  <span>CONTACT</span>
+  </div>
+  <div class="row">
+    <div class="col">
+    <h2 class="text-center">SUBSCRIBE FOR MORE INFO</h2>
+    </div>
+    <div class="col">
+      <div class="input-group mb-3">
+        <input type="text" class="form-control" placeholder="E-mail" aria-label="E-mail" aria-describedby="button-addon2">
+        <div class="input-group-append">
+          <button class="btn btn-outline-secondary" type="button" id="button-addon2">Send</button>
+        </div>
+      </div>
+    </div>
+  </div>
+    <h3 class="text-center">Сopyright © 2020  All rights reserved</h3>
+</footer>
