--- a/src/app/components/account/account.component.html
+++ b/src/app/components/account/account.component.html
@@ -1,1 +1,184 @@
-<p>account works!</p>
+<div class="row">
+  <div class="col"></div>
+  <div class="col">
+    <h1 class="text-right"><a (click)="div1Function()" class="text-dark text-decoration-none">Personal information</a></h1>
+  </div>
+  <div class="col">
+    <h1 class="text-center"><a (click)="div2Function()" class="text-dark text-decoration-none">My orders</a></h1>
+  </div>
+  <div class="col">
+    <h1 class="text-left"><a (click)="div3Function()" class="text-dark text-decoration-none">Results of analyzes</a></h1>
+  </div>
+</div>
+<div *ngIf="div2">
+<div class="row">
+  <div class="col tableDiv">
+    <h1 class="text-center personal">My Orders</h1>
+    <div class="row dib">
+      <div class="col">
+        <h2 class="text-center">
+          Therapist
+        </h2>
+      </div>
+      <div class="col">
+        <h2 class="font-weight-normal">Аркадий Паровозоv</h2>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <h2 class="text-center">
+          Hospital
+        </h2>
+      </div>
+      <div class="col">
+        <h2 class="font-weight-normal"> №12</h2>
+      </div>
+
+    </div>
+    <div class="row">
+      <div class="col">
+        <h2 class="text-center">
+          Order number
+        </h2>
+      </div>
+      <div class="col">
+        <h2 class="font-weight-normal">#31484</h2>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <h2 class="text-center">
+          Waiting time
+        </h2>
+      </div>
+      <div class="col">
+        <h2 class="font-weight-normal">20 min</h2>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <h2 class="text-center">
+          About order
+        </h2>
+      </div>
+      <div class="col">
+        <h2 class="font-weight-normal"><button class="btn btn-info font-weight-normal">View</button></h2>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <h1 class="text-right font-weight-light  vertical-text">information</h1>
+  </div>
+</div>
+  <div class="br"></div>
+  <div class="row">
+    <div class="col tableDiv">
+      <div class="row">
+        <div class="col">
+          <h2 class="text-center">
+            Therapist
+          </h2>
+        </div>
+        <div class="col">
+          <h2 class="font-weight-normal">Аркадий Паровозоv</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <h2 class="text-center">
+            Hospital
+          </h2>
+        </div>
+        <div class="col">
+          <h2 class="font-weight-normal"> №12</h2>
+        </div>
+
+      </div>
+      <div class="row">
+        <div class="col">
+          <h2 class="text-center">
+            Order number
+          </h2>
+        </div>
+        <div class="col">
+          <h2 class="font-weight-normal">#31484</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <h2 class="text-center">
+            Waiting time
+          </h2>
+        </div>
+        <div class="col">
+          <h2 class="font-weight-normal">20 min</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <h2 class="text-center">
+            About order
+          </h2>
+        </div>
+        <div class="col">
+          <h2 class="font-weight-normal"><button class="btn btn-info font-weight-normal">View</button></h2>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+    </div>
+  </div>
+</div>
+<div *ngIf="div1">
+  <div class="row">
+    <div class="col">
+      <h1 class="text-center personal">Personal information</h1>
+      <div class="row dib">
+        <div class="col">
+          <h2 class="text-center">
+            Address
+          </h2>
+        </div>
+        <div class="col">
+          <h2 class="font-weight-normal">City: {{city}}</h2>
+          <h2 class="font-weight-normal">Street: {{street}}</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <h2 class="text-center">
+            Age
+          </h2>
+        </div>
+        <div class="col">
+          <h2 class="font-weight-normal">{{age}}</h2>
+        </div>
+
+      </div>
+      <div class="row">
+        <div class="col">
+          <h2 class="text-center">
+            Gender
+          </h2>
+        </div>
+        <div class="col">
+          <h2 class="font-weight-normal">{{gender}}</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <h2 class="text-center">
+            Medical Card
+          </h2>
+        </div>
+        <div class="col">
+          <h2 class="font-weight-normal"><button class="btn btn-info font-weight-normal">Download</button></h2>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <h1 class="text-right font-weight-light  vertical-text">information</h1>
+    </div>
+  </div>
+</div>
+<div *ngIf="div3">3</div>
