--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,22 +1,11 @@
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 60px;
-  line-height: 60px;
-}
-img{
-  width: 50px;
-  height: 50px;
+span{
+  font-size: 150%;
   padding-left: 10%;
 }
-a{
-  font-size: 15px;
-  padding-left: 12%;
+.row{
+  padding:2%;
 }
-input[type=text] {
-  width: 15%;
-  height: 50%;
-  padding-left: 10%;
-  border-radius: 5px;
+.form-control{
+  width: 200px;
 }
+
