--- a/src/app/components/order/order.component.html
+++ b/src/app/components/order/order.component.html
@@ -1,1 +1,73 @@
-<p>order works!</p>
+<div class="row">
+  <div class="col">
+    <h1 class="text-center">Med.Checkup</h1>
+    <form>
+      <div class="form-row">
+        <div class="col">
+          <input type="text" class="form-control" placeholder="First name">
+        </div>
+        <div class="col">
+          <input type="text" class="form-control" placeholder="Last name">
+        </div>
+      </div>
+    </form>
+      <form style="padding: 2%">
+        <div class="form-row">
+          <div class="col">
+            <input type="text" class="form-control" placeholder="City">
+          </div>
+          <div class="col">
+            <input type="text" class="form-control" placeholder="Street">
+          </div>
+          <div class="col">
+            <input type="text" class="form-control" placeholder="House">
+          </div>
+        </div>
+      </form>
+      <div class="input-group mb-3">
+        <select class="custom-select" id="inputGroupSelect02">
+          <option selected>Choose...</option>
+          <option value="1">Male</option>
+          <option value="2">Female</option>
+          <option value="3">LGBTQ+</option>
+        </select>
+        <div class="input-group-append">
+          <label class="input-group-text" for="inputGroupSelect02">Gender</label>
+        </div>
+      </div>
+
+    <form>
+      <div class="form-row">
+        <div class="col">
+          <input type="number" class="form-control" placeholder="Day">
+        </div>
+        <div class="col">
+          <input type="number" class="form-control" placeholder="Month">
+        </div>
+        <div class="col">
+          <input type="text" class="form-control" placeholder="Time">
+        </div>
+      </div>
+    </form>
+  </div>
+  <div class="col">
+      <h1>Addons</h1>
+    <div class="custom-control custom-checkbox">
+      <input type="checkbox" class="custom-control-input" id="customCheck1">
+      <label class="custom-control-label" for="customCheck1">Medicine</label>
+    </div>
+    <div class="custom-control custom-checkbox">
+      <input type="checkbox" class="custom-control-input" id="customCheck2">
+      <label class="custom-control-label" for="customCheck2">Food</label>
+    </div>
+    <div class="custom-control custom-checkbox">
+      <input type="checkbox" class="custom-control-input" id="customCheck3">
+      <label class="custom-control-label" for="customCheck3">Something else</label>
+    </div>
+    <div class="form-group">
+      <label for="exampleFormControlTextarea1" class="exam">Comments</label>
+      <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+    </div>
+  </div>
+</div>
+<button type="button" class="btn btn-outline-success btn-lg btn-block">MAKE ORDER</button>
