fixed bug with component

--- a/src/app/components/account/account.component.html
+++ b/src/app/components/account/account.component.html
@@ -52,7 +52,7 @@
         </h2>
       </div>
       <div class="col">
-        <h2 class="font-weight-normal">20 min</h2>
+        <h2 class="font-weight-normal">{{date | date:'fullDate' }}</h2>
       </div>
     </div>
     <div class="row">
@@ -181,4 +181,3 @@
     </div>
   </div>
 </div>
-<div *ngIf="div3">3</div>
