--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,9 +1,9 @@
 <footer class="card-footer">
   <div class="row">
-  <span>LEGAL INFORMATION</span>
-  <span>DATA PRIVACY</span>
-  <span>OTHER LINKS</span>
-  <span>CONTACT</span>
+  <span>{{legInfo|uppercase}}</span>
+  <span>{{datePriv|uppercase}}</span>
+  <span>{{other|uppercase}}</span>
+  <span>{{cont|uppercase}}</span>
   </div>
   <div class="row">
     <div class="col">
