--- a/src/app/components/order/order.component.html
+++ b/src/app/components/order/order.component.html
@@ -53,15 +53,15 @@
   <div class="col">
       <h1>Addons</h1>
     <div class="custom-control custom-checkbox">
-      <input type="checkbox" class="custom-control-input" id="customCheck1">
+      <input type="checkbox" [(ngModel)]="med" class="custom-control-input" id="customCheck1">
       <label class="custom-control-label" for="customCheck1">Medicine</label>
     </div>
     <div class="custom-control custom-checkbox">
-      <input type="checkbox" class="custom-control-input" id="customCheck2">
+      <input type="checkbox" [(ngModel)]="food" class="custom-control-input" id="customCheck2">
       <label class="custom-control-label" for="customCheck2">Food</label>
     </div>
     <div class="custom-control custom-checkbox">
-      <input type="checkbox" class="custom-control-input" id="customCheck3">
+      <input type="checkbox" [(ngModel)]="other" class="custom-control-input" id="customCheck3">
       <label class="custom-control-label" for="customCheck3">Something else</label>
     </div>
     <div class="form-group">
@@ -70,4 +70,6 @@
     </div>
   </div>
 </div>
+<br>
+<h1 class="text-center text-info">Pay:{{ money |orderPipe:med:food:other }}</h1>
 <button type="button" (click)="setDate(day,month,time)" class="btn btn-outline-success btn-lg btn-block">MAKE ORDER</button>
