--- a/src/app/components/order/order.component.html
+++ b/src/app/components/order/order.component.html
@@ -64,12 +64,22 @@
       <input type="checkbox" [(ngModel)]="other" class="custom-control-input" id="customCheck3">
       <label class="custom-control-label" for="customCheck3">Something else</label>
     </div>
+    <div class="custom-control custom-checkbox">
+      <input type="checkbox" [(ngModel)]="warHero" class="custom-control-input" id="customCheck4">
+      <label class="custom-control-label" for="customCheck4">War Hero</label>
+    </div>
+    <div class="custom-control custom-checkbox">
+      <input type="checkbox" [(ngModel)]="doctor" class="custom-control-input" id="customCheck5">
+      <label class="custom-control-label" for="customCheck5">Med. worker</label>
+    </div>
     <div class="form-group">
       <label for="exampleFormControlTextarea1" class="exam">Comments</label>
       <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
     </div>
+    <div class="form-group">
+    </div>
   </div>
 </div>
 <br>
-<h1 class="text-center text-info">Pay:{{ money |orderPipe:med:food:other }}</h1>
+<h1 class="text-center text-info">Pay:{{ money | orderPipe:med:food:other |discount:warHero:doctor }}</h1>
 <button type="button" (click)="setDate(day,month,time)" class="btn btn-outline-success btn-lg btn-block">MAKE ORDER</button>
