--- a/src/app/components/order/order.component.html
+++ b/src/app/components/order/order.component.html
@@ -4,54 +4,62 @@
     <form>
       <div class="form-row">
         <div class="col">
-          <input type="text" class="form-control" [(ngModel)]="name" [ngModelOptions]="{standalone: true}" placeholder="First name">
+          <input type="text" class="form-control" [(ngModel)]="name" [ngModelOptions]="{standalone: true}"
+                 placeholder="First name">
         </div>
         <div class="col">
-          <input type="text" class="form-control" [(ngModel)]="surname" [ngModelOptions]="{standalone: true}" placeholder="Last name">
+          <input type="text" class="form-control" [(ngModel)]="surname" [ngModelOptions]="{standalone: true}"
+                 placeholder="Last name">
         </div>
       </div>
     </form>
-      <form style="padding: 2%">
-        <div class="form-row">
-          <div class="col">
-            <input type="text" class="form-control" [(ngModel)]="city" [ngModelOptions]="{standalone: true}" placeholder="City">
-          </div>
-          <div class="col">
-            <input type="text" class="form-control" [(ngModel)]="street" [ngModelOptions]="{standalone: true}" placeholder="Street">
-          </div>
-          <div class="col">
-            <input type="text" class="form-control" [(ngModel)]="house" [ngModelOptions]="{standalone: true}" placeholder="House">
-          </div>
+    <form style="padding: 2%">
+      <div class="form-row">
+        <div class="col">
+          <input type="text" class="form-control" [(ngModel)]="city" [ngModelOptions]="{standalone: true}"
+                 placeholder="City">
         </div>
-      </form>
-      <div class="input-group mb-3">
-        <select class="custom-select" [(ngModel)]="gender" [ngModelOptions]="{standalone: true}" id="inputGroupSelect02">
-          <option selected>Choose...</option>
-          <option value="1">Male</option>
-          <option value="2">Female</option>
-          <option value="3">LGBTQ+</option>
-        </select>
-        <div class="input-group-append">
-          <label class="input-group-text" for="inputGroupSelect02">Gender</label>
+        <div class="col">
+          <input type="text" class="form-control" [(ngModel)]="street" [ngModelOptions]="{standalone: true}"
+                 placeholder="Street">
+        </div>
+        <div class="col">
+          <input type="text" class="form-control" [(ngModel)]="house" [ngModelOptions]="{standalone: true}"
+                 placeholder="House">
         </div>
       </div>
+    </form>
+    <div class="input-group mb-3">
+      <select class="custom-select" [(ngModel)]="gender" [ngModelOptions]="{standalone: true}" id="inputGroupSelect02">
+        <option selected>Choose...</option>
+        <option value="1">Male</option>
+        <option value="2">Female</option>
+        <option value="3">LGBTQ+</option>
+      </select>
+      <div class="input-group-append">
+        <label class="input-group-text" for="inputGroupSelect02">Gender</label>
+      </div>
+    </div>
 
     <form>
       <div class="form-row">
         <div class="col">
-          <input type="number" class="form-control" [(ngModel)]="day" [ngModelOptions]="{standalone: true}" placeholder="Day">
+          <input type="number" class="form-control" [(ngModel)]="day" [ngModelOptions]="{standalone: true}"
+                 placeholder="Day">
         </div>
         <div class="col">
-          <input type="number" class="form-control" [(ngModel)]="month" [ngModelOptions]="{standalone: true}" placeholder="Month">
+          <input type="number" class="form-control" [(ngModel)]="month" [ngModelOptions]="{standalone: true}"
+                 placeholder="Month">
         </div>
         <div class="col">
-          <input type="text" class="form-control" [(ngModel)]="time" [ngModelOptions]="{standalone: true}" placeholder="Time">
+          <input type="text" class="form-control" [(ngModel)]="time" [ngModelOptions]="{standalone: true}"
+                 placeholder="Time">
         </div>
       </div>
     </form>
   </div>
   <div class="col">
-      <h1>Addons</h1>
+    <h1>Addons</h1>
     <div class="custom-control custom-checkbox">
       <input type="checkbox" [(ngModel)]="med" class="custom-control-input" id="customCheck1">
       <label class="custom-control-label" for="customCheck1">Medicine</label>
@@ -74,7 +82,7 @@
     </div>
     <div class="form-group" style="padding-right: 2%; ">
       <label for="exampleFormControlTextarea1" class="exam">Comments</label>
-      <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+      <textarea class="form-control" [(ngModel)]="comments" id="exampleFormControlTextarea1" rows="3"></textarea>
     </div>
     <div class="form-group">
     </div>
@@ -82,4 +90,6 @@
 </div>
 <br>
 <h1 class="text-center text-info">Pay:{{ money | orderPipe:med:food:other |discount:warHero:doctor }}</h1>
-<button type="button" (click)="addOrder(setDate(day,month,time))" class="btn btn-outline-success btn-lg btn-block">MAKE ORDER</button>
+<button type="button" (click)="addOrder(setDate(day,month,time),med,food,warHero,doctor,comments)"
+        class="btn btn-outline-success btn-lg btn-block">MAKE ORDER
+</button>
